; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libcam/extr_camlib.c_cam_close_spec_device.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libcam/extr_camlib.c_cam_close_spec_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cam_close_spec_device(%struct.cam_device* %0) #0 {
  %2 = alloca %struct.cam_device*, align 8
  store %struct.cam_device* %0, %struct.cam_device** %2, align 8
  %3 = load %struct.cam_device*, %struct.cam_device** %2, align 8
  %4 = icmp eq %struct.cam_device* %3, null
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %18

6:                                                ; preds = %1
  %7 = load %struct.cam_device*, %struct.cam_device** %2, align 8
  %8 = getelementptr inbounds %struct.cam_device, %struct.cam_device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %18

11:                                               ; preds = %6
  %12 = load %struct.cam_device*, %struct.cam_device** %2, align 8
  %13 = getelementptr inbounds %struct.cam_device, %struct.cam_device* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @close(i32 %14)
  %16 = load %struct.cam_device*, %struct.cam_device** %2, align 8
  %17 = getelementptr inbounds %struct.cam_device, %struct.cam_device* %16, i32 0, i32 0
  store i32 -1, i32* %17, align 4
  br label %18

18:                                               ; preds = %5, %11, %6
  ret void
}

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
